# eratosthenes-sieve.hs

./: .gitignore  README.md  eratosthenes-sieve.cabal
src/: EratosthenesSieve.hs
test/: Spec.hs
